--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "author": "Rafael Vieira <rafaelleveske@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "tsnd src/server.ts"
+    "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
+    "knex:migrate:rollback": "knex --knexfile knexfile.ts migrate:rollback"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.7",
+    "@types/express": "^4.17.7",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "6.8.0",
@@ -19,5 +23,11 @@
     "prettier": "^2.0.5",
     "ts-node-dev": "^1.0.0-pre.56",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "knex": "^0.21.3",
+    "sqlite3": "^5.0.0"
   }
 }
